samples/_failures_safe/1761724008_46e709_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0395972d.c: In function ‘main’:
./samples/SAFE/__tmp_0395972d.c:141: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_0395972d.c:140:9: error: expected declaration or statement at end of input
  140 |         if
      |         ^~
./samples/SAFE/__tmp_0395972d.c:140:9: error: expected declaration or statement at end of input
